--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,7 @@ a {
     display: flex;
     justify-content: space-between; 
     align-items: center; 
+    z-index: 1000;
 }
 
 #header .h_logo {
