--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,7 @@
-*{margin: 0; padding: 0;}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+
+*{margin: 0; padding: 0;
+    font-family: "Noto Sans KR", sans-serif;}
 button{border: 0; background-color: transparent;}
 ul, li {list-style-type: none;}
 a {
@@ -8,17 +11,50 @@ a {
 
 #wrap{
     width: 100%;
-    background-color: orange;    
+    background-color: white;    
 }
 #content{
     text-align: center;
 }
 
 /* 랜딩 페이지  */
-#landing{width: 100%; 
+#landing{
+    width: 100%; 
     height: 100vh;
-background-color: yellow;}
+    background: linear-gradient(180deg, #FFFAD2, #FFD735);}
 
-#landing .b_img video{width: 100%; }
+#landing .b_img video{width: 100%;}
+#landing .b_img { position: absolute; z-index: 1; margin-top: 20%; opacity: 0.9;}
+
+#landing .main_txt{
+    position: absolute; 
+    margin-left: 38%; 
+    font-size: 30px;
+    z-index: 2;
+    margin-top: 10%;    
+} 
 
 
+#landing .main_txt button{
+    width: 186px;
+    height: 60px;
+    color: white;
+    background-color: rgb(60, 46, 28);
+    border-radius:18px;
+    margin-top: 10%;
+    font-size: 20px;
+}
+
+.txtbox{
+    font-size: 32px; 
+    background-color: white;
+    padding-top: 5%;
+    /* line-height: 1.5; */
+}
+.txtbox .under{
+    margin-top: 2%;
+}
+.txtbox .under span{
+    font-weight: bold;
+    
+}
