--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,17 @@ a {
     text-align: center;
 }
 
+
+
+/* 버튼 디자인 */
+button{
+    color: white;
+    background-color: rgb(60, 46, 28);
+    border-radius:12px;
+    font-size: 20px;
+    
+}
+
 /* 랜딩 페이지  */
 #landing{
     width: 100%; 
@@ -50,6 +61,7 @@ a {
     background-color: white;
     padding-top: 5%;
     /* line-height: 1.5; */
+    margin-bottom: 10%;
 }
 .txtbox .under{
     margin-top: 2%;
@@ -58,3 +70,86 @@ a {
     font-weight: bold;
     
 }
+
+
+/* 컨텐츠 공통설정 */
+.title_txt h1{
+    font-size: 65px;
+}
+.title_txt p{font-size: 32px; margin-bottom: 2%;}
+
+/* 계좌이체 */
+#con1 .imgbox{
+    width: 365px;
+    height: 750px;
+    background-color: rgb(202, 202, 202);
+    border-radius: 50px;
+
+}
+
+#con1{
+    margin-top: 40%;
+    height: 100vh;
+    
+    margin: 0 20% 20% 20%;
+    text-align: left;
+}
+#con1 .title_txt{ 
+    float: left;
+}
+
+#con1 .L_img{float: right; margin-right: 15%;}
+#con1 .R_img{ float: left; margin-left: 14%;
+    margin-top: 5%;}
+#con1 .txt1{
+    font-size: 25px;
+    line-height: 1.5;
+    float:right; 
+    margin-top: 5%;
+    margin-right: 8.7%;
+    vertical-align: bottom;}
+#con1 .txt1 button{
+    width: 300px;
+    height: 60px;
+    font-size: 24px; font-weight: 400;
+    margin-top: 5%;}
+
+
+
+/* 예적금 */
+#con2{background-color: aqua; 
+    
+    margin: 0 20% 0% 20%;
+    text-align: left;
+    
+}
+
+#con2 .title_txt{
+    text-align: right;
+}
+#con2 .sub_p{margin-top: 2%; font-size: 25px}
+
+
+#con2 .con2box{ margin-top: 5%;}
+#con2 .con2box .imgbox{
+    
+    display: flex ; justify-content: space-between;
+}
+#con2 .con2box .imgbox img{
+    width: 300px; height: 300px; 
+    background-color: rgb(35, 119, 91); 
+    border-radius: 10px;    
+} 
+#con2 .con2box{ text-align: center;
+    display: block ; justify-content: space-around; }
+#con2 .con2box .but_box button{
+    margin-top: 5%; margin-left: 5%;}
+
+
+    /* 예적금 텍스트설정 */
+    #con2 button{ width: 180px; height: 60px; border-radius: 12px;margin-top: 5%;}
+    #con2 .con2_subbox1, .con2_subbox2 p{font-size: 25px;}
+    #con2 .con2_subbox1 h1, .con2_subbox2 h1{font-size: 50px;}
+
+    #con2 .con2_subbox1{margin-top: 13%;}
+    #con2 .con2_subbox2{margin-top: 10%; text-align: right;}
