--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,18 @@ button{
 #con4{background-color: #efe9d2;
     width: 100%;
     height: 100vh;}
+#con4 .title_txt h1{padding-top: 5%;}
 #con4 .title_txt p{margin-top: 1%; font-size: 24px;}
 #con4 .title_txt h1{  line-height: 1.3; margin-top: 5%; font-size: 50px;}
 #con4 button{ width: 355px; height: 60px; border: 12px; 
     font-size: 24px; }
+
+/* 해외계좌 송금 */
+#con5{background-color: pink;
+    width: 100%;
+    height: 100vh;}
+
+.con5_box1 h1{
+    padding-top: 5%; 
+    font-size: 48px;}
+.con5_box1 p{font-size: 24px;}
