--- a/css/index.css
+++ b/css/index.css
@@ -126,9 +126,10 @@ button{
 }
 #con1 .title_txt{ 
     float: left;
+    padding-top: 10%;
 }
 
-#con1 .L_img{float: right; margin-right: 15%;}
+#con1 .L_img{float: right; margin-right: 15%;margin-top: 10%;}
 #con1 .R_img{ float: left; margin-left: 14%;
     margin-top: 5%;}
 #con1 .txt1{
@@ -153,7 +154,7 @@ button{
 }
 
 #con2 .title_txt{
-    text-align: right;
+    text-align: right;padding-top: 7.5%;
 }
 #con2 .sub_p{margin-top: 2%; font-size: 25px;}
 
@@ -188,10 +189,10 @@ button{
     margin: 0 20% 0% 20%;
     text-align: left;
     height: 100vh;
-
+    
     margin-top: 15%;
 }
-#con3 .title_txt{float: left;}
+#con3 .title_txt{float: left;padding-top: 10%;}
 #con3 .sub_p{font-size: 25px; margin-top: 2%;}
 #con3 .L_img{
     width: 365px;
@@ -199,6 +200,7 @@ button{
     background-color: rgb(202, 202, 202);
     border-radius: 50px;
     float: right;
+    margin-top: 10%;
     }
 #con3 button{ width: 180px; height: 60px; border-radius: 12px;margin-top: 2%;}
 
@@ -222,3 +224,113 @@ button{
     padding-top: 5%; 
     font-size: 48px;}
 .con5_box1 p{font-size: 24px;}
+#con5{
+    background-image: url(../image/global.png);
+    background-repeat: no-repeat;
+    float: left;
+}
+.con5_box1 .imgbox{
+    width: 270px;
+    height: 552px;
+    background-color: gray;
+    border-radius: 12px;
+    margin: auto;
+    margin-top: 1.5%;
+}
+
+/* 서류 제출페이지 */
+#con6{
+    width: 100%;
+    height: 100vh;
+    
+    margin-top: 49%;
+}
+.con6{
+    float: left;
+    text-align: left;
+    margin: 0 20% 0 20%;    
+}
+.con6 h1{
+    margin-top: 10%;
+    font-size: 48px;}
+.con6 p{
+    font-size: 24px;
+}
+.con6 .but_box{
+    display: block; justify-content: center;}
+
+.con6 .but_box button{
+    margin-top: 2%;
+    
+    width: 200px; height: 68px;
+    background-color: black; color: white;
+    border-radius: 50px;
+    
+}
+#con6 .box{
+    display: block;
+    justify-content: center;
+}
+#con6 .box img{
+    width: 1140px; 
+    background-color: rgb(223, 223, 223);
+    height: 472px;
+    margin-top: 2%;
+    }
+
+/* it 금융 */
+#con7{
+    width: 100%;
+    height: 100vh;
+}
+
+#con7 h1{
+    padding-top: 5%;
+    font-size: 48px;
+}
+
+.con7_box{
+    display: block;
+    justify-content: center;
+    margin:5% 20% 0 20%;  
+}
+.circle{
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    position: relative;
+    z-index: 1;
+}
+.circle::after{
+    width: 532px;
+    height: 532px;
+    content: "";
+    border-radius: 50%;
+    background-color: #ffe120e6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.4;
+}
+.circle .tbox h3{font-size: 35px;}
+.circle .tbox p{font-size: 20px; margin-top: 5%;}
+.tbox2 h3{font-size: 35px;margin-top: 27%;}
+.tbox2 p{font-size: 20px; margin-top: 5%;}
+
+.con7_box .tbox{
+    margin-top: 35%;
+}
+
+
+.circle:nth-child(1){position: absolute;
+    }
+.circle:nth-child(2){position: absolute;
+    margin-left: 18%; 
+
+    }
+.circle:nth-child(3){
+    
+    position: absolute;
+    margin-left: 35%; 
+    }
