--- a/css/index.css
+++ b/css/index.css
@@ -235,7 +235,7 @@ button{
     background-color: gray;
     border-radius: 12px;
     margin: auto;
-    margin-top: 1.5%;
+    margin-top: %;
 }
 
 /* 서류 제출페이지 */
