--- a/css/index.css
+++ b/css/index.css
@@ -216,18 +216,21 @@ button{
     font-size: 24px; }
 
 /* 해외계좌 송금 */
-#con5{background-color: pink;
+#con5{background-color: rgb(255, 234, 192);
     width: 100%;
-    height: 100vh;}
+    height: 100vh;
+
+}
 
 .con5_box1 h1{
     padding-top: 5%; 
     font-size: 48px;}
 .con5_box1 p{font-size: 24px;}
-#con5{
-    background-image: url(../image/global.png);
-    background-repeat: no-repeat;
-    float: left;
+
+.con5_box1 .b_img{
+    position: absolute;
+    opacity: 0.4;
+    left: 0; /* 가장 왼쪽에 위치 */
 }
 .con5_box1 .imgbox{
     width: 270px;
@@ -235,15 +238,14 @@ button{
     background-color: gray;
     border-radius: 12px;
     margin: auto;
-    margin-top: %;
+    margin-top: 1.5%;
 }
 
 /* 서류 제출페이지 */
 #con6{
     width: 100%;
     height: 100vh;
-    
-    margin-top: 49%;
+    background-color: skyblue;
 }
 .con6{
     float: left;
@@ -267,15 +269,25 @@ button{
     border-radius: 50px;
     
 }
-#con6 .box{
-    display: block;
-    justify-content: center;
+#con6 .box1, .box2, .box3, .box4{
+    transform: translateY(80%);
+    margin-left: 20%;
+    display: none;
+    width: 1140px;
+    height: 472px; 
+    position: relative;
 }
-#con6 .box img{
-    width: 1140px; 
+#con6 .box1 {
     background-color: rgb(223, 223, 223);
-    height: 472px;
-    margin-top: 2%;
+    }
+#con6 .box2{
+    background-color: rgb(255, 46, 46);
+    }
+#con6 .box3{
+    background-color: rgb(82, 49, 228);
+    }
+#con6 .box4{ 
+    background-color: rgb(89, 20, 20);
     }
 
 /* it 금융 */
